# finance-tracker-api

./: .env.example  .gitignore  .pre-commit-config.yaml  LEARNING_JOURNAL.md  README.md  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 8e0457b95aec_initial.py
app/: main.py
app/core/: config.py  database.py  deps.py  exceptions.py  logging_config.py  middleware.py  security.py  tasks.py
app/models/: __init__.py  category.py  transaction.py  user.py
app/repositories/: category.py  summary.py  transaction.py  user.py
app/routers/: auth.py  category.py  summary.py  transaction.py
app/schemas/: category.py  common.py  summary.py  transaction.py  user.py
app/services/: auth.py  category.py  summary.py  transaction.py
tests/: conftest.py  test_auth_service.py  test_category_service.py  test_edge_cases.py  test_middleware.py  test_summary_service.py  test_tasks.py  test_transaction_service.py
tests/integration/: conftest.py  test_flows.py
